--- a/webContent/css/project.css
+++ b/webContent/css/project.css
@@ -166,127 +166,6 @@
     font-weight: bold;
 }
 
-/* 
-#project ul {
-    margin: 0;
-    .dashed {
-        list-style-type: none;
-    }
-    > li {
-        text-indent: -5px;
-        margin-top: 8px;
-        margin-bottom: 8px;
-        &:before {
-            content: "-";
-            text-indent: -5px;
-        }
-    }
-
+input:focus {
+    outline-width: 0;
 }
-
-a {
-    text-decoration: none;
-    font-weight: bold;
-    &:hover {
-        color: $light-blue;
-    }
-}
-
-.bolden {
-    font-weight: bold;
-}
-
-#project {
-
-    #geneticIntro {
-        margin-left: auto;
-        margin-right: auto;
-        #genetic {
-            #mydiv {
-                font-size: 20px;
-            }
-        }
-    #floating-panel {
-        position: absolute;
-        top: 9.3%;
-        right: 10%;
-        z-index: 5;
-        background-color: $white;
-        padding-left: 10px;
-        padding-right: 10px;
-        border: 1px solid $gray;
-        font-family: 'Roboto','sans-serif';
-        line-height: 12px;
-        font-size: $small-size;
-        border-radius: 10px;
-        input {
-            margin-top: 5px;
-            margin-bottom: 5px;
-            font-size: $large-size;
-        }
-        #buttonSubmit {
-            margin-top: 2%;
-            background: url("../image/background14.jpg");
-            background-size: 100% 50%;
-            border: 1px solid black;
-            font-size: $medium-size;
-            border-radius: 5px;
-            font-weight: bold;
-            &:hover {
-                cursor: pointer;
-            }
-        }
-        
-    }
-    .iframe-container {
-        position: relative;
-        width: 100%;
-        > * {
-            display: block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            margin: 0;
-            padding: 0;
-            height: auto;
-            width: 100%;
-        }
-        #map {
-            width: 100%;
-            border: 1px solid $gray;
-            border-radius: 5px;
-        }
-    }
-    #buttonSubmit {
-        margin-top: 2%;
-        background: url("../../image/background14.jpg");
-        background-size: 100% 50%;
-        border: 1px solid black;
-        font-size: 15px;
-        border-radius: 5px;
-        font-weight: bold;
-    }
-    #buttonCode {
-        font-size: $medium-size;
-        font-weight: bold;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-        background: url("../../image/background14.jpg");
-        background-size: 100% 50%;
-        border: 1px solid $black;
-        border-radius: 5px;
-    }
-    #step3 {
-        #upload {
-            width: 100%;
-            padding: 1%;
-            #fileToUpload {
-                margin-top: 3%;
-            }
-        }
-    }
-
-} */
